--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "gram_listing",
+  "name": "gram_website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "pnpm -r run dev",
-    "lint": "../../node_modules/.bin/next lint"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "engines": {
     "node": ">=22",
@@ -12,17 +14,15 @@
   },
   "dependencies": {
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "next": "14.2.8"
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8"
-  },
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ]
+    "postcss": "^8",
+    "tailwindcss": "^3.4.10"
+  }
 }
