build and run dev successful

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -14,6 +14,10 @@
     "@auth/kysely-adapter": "0.4.2",
     "@gramlisting/db": "workspace:*",
     "@t3-oss/env-nextjs": "0.8.0",
+    "@telegram-auth/react": "^1.0.4",
+    "@telegram-auth/server": "^1.0.4",
+    "@vercel/postgres-kysely": "0.8.0",
+    "kysely": "0.27.3",
     "next": "14.2.5",
     "next-auth": "4.24.7",
     "react": "18.3.1",
