--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -54,7 +54,9 @@
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.0",
     "cmdk": "0.2.1",
+    "framer-motion": "11.0.3",
     "lucide-react": "^0.439.0",
+    "next": "^14.2.8",
     "tailwind-merge": "1.14.0",
     "three": "0.163.0",
     "three-globe": "2.31.0",
