--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 .idea
-# dependencies
-/node_modules
+.next
 /apps/*/node_modules/
 /packages/*/node_modules/
+/tooling/*/node_modules/
+
+
+
+# dependencies
+/node_modules
+
 /.pnp
 .pnp.js
 .yarn/install-state.gz
