--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 .idea
 .next
+.env
+.env.local
+
 /apps/*/node_modules/
 /packages/*/node_modules/
 /tooling/*/node_modules/
