--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -18,7 +18,9 @@
     "@gramlisting/auth": "workspace:*",
     "@hookform/resolvers": "3.3.4",
     "@next/mdx": "14.2.5",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "1.1.1-rc.5",
+    "@radix-ui/react-icons": "^1.3.0",
     "@t3-oss/env-nextjs": "0.8.0",
     "@tanstack/react-query": "5.36.0",
     "@tanstack/react-query-devtools": "5.36.0",
@@ -31,6 +33,8 @@
     "@trpc/server": "10.44.1",
     "@vercel/analytics": "1.1.3",
     "@vercel/speed-insights": "1.0.9",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "date-fns": "3.3.1",
     "fetch-ponyfill": "7.1.0",
     "framer-motion": "11.0.3",
@@ -49,6 +53,7 @@
     "react-wrap-balancer": "1.1.0",
     "recharts": "2.11.0",
     "superjson": "2.2.1",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "1.0.7",
     "vaul": "0.9.0",
     "zod": "3.22.4",
