--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --experimental-https",
-    "build": "next build",
+    "with-env": "dotenv -e ../../.env.local --",
+    "dev": "pnpm with-env next dev --experimental-https",
+    "build": "pnpm with-env next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,8 +17,8 @@
     "@dinero.js/currencies": "2.0.0-alpha.14",
     "@formatjs/intl-localematcher": "0.5.4",
     "@gramlisting/auth": "workspace:*",
-    "@hookform/resolvers": "3.3.4",
-    "@next/mdx": "14.2.5",
+    "@hookform/resolvers": "3.9.0",
+    "@next/mdx": "14.2.8",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "1.1.1-rc.5",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -36,65 +37,65 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@t3-oss/env-nextjs": "0.8.0",
-    "@tanstack/react-query": "5.36.0",
-    "@tanstack/react-query-devtools": "5.36.0",
-    "@tanstack/react-table": "8.17.0",
+    "@t3-oss/env-nextjs": "0.11.1",
+    "@tanstack/react-query": "5.55.0",
+    "@tanstack/react-query-devtools": "5.55.0",
+    "@tanstack/react-table": "8.20.5",
     "@telegram-auth/react": "^1.0.4",
     "@telegram-auth/server": "^1.0.4",
-    "@trpc/client": "10.44.1",
-    "@trpc/next": "10.44.1",
-    "@trpc/react-query": "10.44.1",
-    "@trpc/server": "10.44.1",
-    "@vercel/analytics": "1.1.3",
-    "@vercel/speed-insights": "1.0.9",
+    "@trpc/client": "10.45.2",
+    "@trpc/next": "10.45.2",
+    "@trpc/react-query": "10.45.2",
+    "@trpc/server": "10.45.2",
+    "@vercel/analytics": "1.3.1",
+    "@vercel/speed-insights": "1.0.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "date-fns": "3.3.1",
+    "date-fns": "3.6.0",
     "fetch-ponyfill": "7.1.0",
-    "framer-motion": "11.0.3",
+    "framer-motion": "11.5.4",
     "lucide-react": "^0.439.0",
     "negotiator": "0.6.3",
     "next": "14.2.8",
     "next-auth": "4.24.7",
-    "next-themes": "0.2.1",
-    "posthog-js": "1.105.0",
-    "posthog-node": "3.6.2",
+    "next-themes": "0.3.0",
+    "posthog-js": "1.160.3",
+    "posthog-node": "4.2.0",
     "react": "^18",
-    "react-day-picker": "8.10.0",
+    "react-day-picker": "9.0.9",
     "react-dom": "^18",
-    "react-hook-form": "7.50.1",
-    "react-image-crop": "11.0.5",
-    "react-wrap-balancer": "1.1.0",
-    "recharts": "2.11.0",
+    "react-hook-form": "7.53.0",
+    "react-image-crop": "11.0.6",
+    "react-wrap-balancer": "1.1.1",
+    "recharts": "2.12.7",
     "superjson": "2.2.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "1.0.7",
-    "vaul": "0.9.0",
-    "zod": "3.22.4",
-    "zustand": "4.5.0"
+    "vaul": "0.9.2",
+    "zod": "3.23.8",
+    "zustand": "4.5.5"
   },
   "devDependencies": {
     "@gramlisting/eslint-config": "workspace:*",
     "@gramlisting/prettier-config": "workspace:*",
     "@gramlisting/typescript-config": "workspace:*",
     "@next-devtools/core": "0.2.0",
-    "@types/mdx": "2.0.10",
+    "@types/mdx": "2.0.13",
     "@types/negotiator": "0.6.3",
     "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "10.4.17",
-    "contentlayer2": "0.4.6",
-    "dotenv-cli": "7.3.0",
-    "eslint": "8.57.0",
-    "mdast-util-toc": "7.0.0",
-    "next-contentlayer2": "0.4.6",
+    "autoprefixer": "10.4.20",
+    "contentlayer2": "0.5.0",
+    "dotenv-cli": "7.4.2",
+    "eslint": "9.10.0",
+    "mdast-util-toc": "7.1.0",
+    "next-contentlayer2": "0.5.0",
     "postcss": "^8",
     "prettier": "3.3.3",
     "rehype": "13.0.1",
     "rehype-autolink-headings": "7.1.0",
-    "rehype-pretty-code": "0.12.3",
+    "rehype-pretty-code": "0.14.0",
     "rehype-slug": "6.0.0",
     "remark": "15.0.1",
     "remark-gfm": "4.0.0",
