--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -8,38 +8,37 @@
   "main": "./index.ts",
   "types": "./index.ts",
   "scripts": {
-    "clean": "rm -rf .turbo node_modules",
+    "clean": "rm -rf node_modules",
     "lint": "eslint .",
     "format": "prisma format && prettier --check '**/*.{ts,json}' ",
-    "db:generate": "prisma generate",
-    "db:push": "bun with-env prisma db push --skip-generate",
     "typecheck": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env.local --",
-    "prisma_migrate_dev": "bun with-env prisma migrate dev",
-    "prisma_migrate_reset": "npx prisma migrate reset",
-    "prisma_migrate_deploy": "npx prisma migrate deploy",
-    "prisma_migrate_status": "npx prisma migrate status",
-    "prisma_migrate_resolve": "npx prisma migrate resolve",
-    "prisma_generate": "npx prisma generate",
-    "prisma_db_pull": "npx prisma db pull  && npx prisma generate",
-    "prisma_db_push": "npx prisma db push  && npx prisma generate",
-    "prisma_db_seed": "npx prisma db seed",
-    "prisma_studio": "npx prisma studio"
+    "prisma_migrate_dev": "pnpm with-env prisma migrate dev",
+    "prisma_migrate_reset": "pnpm with-env  prisma migrate reset",
+    "prisma_migrate_deploy": "pnpm with-env  prisma migrate deploy",
+    "prisma_migrate_status": "pnpm with-env  prisma migrate status",
+    "prisma_migrate_resolve": "pnpm with-env  prisma migrate resolve",
+    "prisma_generate": "pnpm with-env  prisma generate",
+    "prisma_db_pull": "pnpm with-env  prisma db pull  && pnpm with-env  prisma generate",
+    "prisma_db_push": "pnpm with-env  prisma db push  && pnpm with-env  prisma generate",
+    "prisma_db_seed": "pnpm with-env  prisma db seed",
+    "prisma_studio": "pnpm with-env  prisma studio"
   },
   "dependencies": {
-    "kysely": "0.27.3",
-    "@vercel/postgres-kysely": "0.8.0"
+    "@prisma/client": "^5.19.1",
+    "@vercel/postgres-kysely": "0.10.0",
+    "kysely": "0.27.4"
   },
   "devDependencies": {
     "@gramlisting/eslint-config": "workspace:*",
     "@gramlisting/prettier-config": "workspace:*",
     "@gramlisting/typescript-config": "workspace:*",
-    "dotenv-cli": "7.3.0",
-    "eslint": "8.57.0",
+    "@types/pg": "8.11.8",
+    "dotenv-cli": "7.4.2",
+    "eslint": "9.10.0",
     "prettier": "3.3.3",
-    "prisma": "5.9.1",
-    "prisma-kysely": "1.7.1",
-    "@types/pg": "8.11.0",
+    "prisma": "5.19.1",
+    "prisma-kysely": "1.8.0",
     "typescript": "5.5.4"
   },
   "eslintConfig": {
