--- a/apps/website/tsconfig.json
+++ b/apps/website/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "@gramlisting/typescript-config/base.json",
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
