--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@dinero.js/currencies": "2.0.0-alpha.14",
     "@formatjs/intl-localematcher": "0.5.4",
+    "@gramlisting/db": "workspace:*",
     "@gramlisting/auth": "workspace:*",
     "@hookform/resolvers": "3.9.0",
     "@next/mdx": "14.2.8",
@@ -43,10 +44,10 @@
     "@tanstack/react-table": "8.20.5",
     "@telegram-auth/react": "^1.0.4",
     "@telegram-auth/server": "^1.0.4",
-    "@trpc/client": "10.45.2",
-    "@trpc/next": "10.45.2",
-    "@trpc/react-query": "10.45.2",
-    "@trpc/server": "10.45.2",
+    "@trpc/client": "next",
+    "@trpc/next": "next",
+    "@trpc/react-query": "next",
+    "@trpc/server": "next",
     "@vercel/analytics": "1.3.1",
     "@vercel/speed-insights": "1.0.12",
     "class-variance-authority": "^0.7.0",
