--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -11,7 +11,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/kysely-adapter": "1.4.2",
+    "@auth/kysely-adapter": "^1.4.2",
     "@gramlisting/db": "workspace:*",
     "@t3-oss/env-nextjs": "0.11.1",
     "@telegram-auth/react": "^1.0.4",
