--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -19,6 +19,7 @@
     "@gramlisting/auth": "workspace:*",
     "@gramlisting/db": "workspace:*",
     "@hookform/resolvers": "3.9.0",
+    "@js-temporal/polyfill": "^0.4.4",
     "@next/mdx": "14.2.8",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "1.1.1-rc.5",
@@ -44,10 +45,6 @@
     "@tanstack/react-table": "8.20.5",
     "@telegram-auth/react": "^1.0.4",
     "@telegram-auth/server": "^1.0.4",
-    "@trpc/client": "next",
-    "@trpc/next": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
     "@vercel/analytics": "1.3.1",
     "@vercel/speed-insights": "1.0.12",
     "class-variance-authority": "^0.7.0",
