--- a/apps/website/package.json
+++ b/apps/website/package.json
@@ -47,6 +47,7 @@
     "@telegram-auth/server": "^1.0.4",
     "@vercel/analytics": "1.3.1",
     "@vercel/speed-insights": "1.0.12",
+    "ali-oss": "^6.21.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "3.6.0",
