--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -25,7 +25,7 @@
     "prisma_studio": "pnpm with-env  prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "^5.19.1"
+    "@prisma/client": "latest"
   },
   "devDependencies": {
     "@gramlisting/eslint-config": "workspace:*",
@@ -35,7 +35,7 @@
     "dotenv-cli": "7.4.2",
     "eslint": "9.10.0",
     "prettier": "3.3.3",
-    "prisma": "5.19.1",
+    "prisma": "5.20.0",
     "typescript": "5.5.4"
   },
   "eslintConfig": {
